WIP: model fitting and selection

--- a/notebooks/features.ipynb
+++ b/notebooks/features.ipynb
@@ -336,7 +336,7 @@
    "id": "1e9911f1-e4af-44eb-b752-08fdd851f477",
    "metadata": {},
    "source": [
-    "## Events per minute\n",
+    "## Rate of Events\n",
     "\n",
     "Hypothesis: households with more than one occupant trigger more sensors over the same period of time.\n",
     "\n",
