--- a/notebooks/explore.ipynb
+++ b/notebooks/explore.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58f317b2-1985-476e-a62a-b99cc0411141",
+   "id": "f6d00a08-aff4-40f3-bf8a-87cf39ed1cf9",
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis\n",
     "\n",
-    "In this notebook, we will explore the dataset provided and devise some simple features to use in the model."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6d00a08-aff4-40f3-bf8a-87cf39ed1cf9",
-   "metadata": {},
-   "source": [
     "## First look\n",
     "\n",
     "### Size\n",
@@ -53,8 +45,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-30 21:12:16,643 - INFO - Raw data downloaded successfully to /home/jovyan/work/data/data.db\n",
-      "2024-04-30 21:12:16,780 - INFO - Table train_valid_test added successfully.\n"
+      "2024-05-06 13:06:12,846 - INFO - Not downloading again, /home/jovyan/work/data/data.db already exists.\n",
+      "2024-05-06 13:06:12,847 - INFO - Table train_valid_test already exists, not adding again.\n"
      ]
     },
     {
