--- a/notebooks/fit.ipynb
+++ b/notebooks/fit.ipynb
@@ -158,10 +158,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-06 10:24:54,391 - INFO - Selected 5 with best score of 0.5871013749412974\n",
-      "2024-05-06 10:24:59,636 - INFO - Selected 4 with best score of 0.6106839106219172\n",
-      "2024-05-06 10:25:04,546 - INFO - Finishing as selection best score 0.6141520928249902 was not better than existing model 0.6106839106219172\n",
-      "2024-05-06 10:25:04,547 - INFO - Selected features: [5, 4]\n"
+      "2024-05-06 13:12:53,885 - INFO - Selected 5 with best score of 0.5871013749412974\n",
+      "2024-05-06 13:12:59,505 - INFO - Selected 4 with best score of 0.6106839106219172\n",
+      "2024-05-06 13:13:04,393 - INFO - Finishing as selection best score 0.614was not better than existing model 0.611\n",
+      "2024-05-06 13:13:04,394 - INFO - Selected features: [5, 4]\n"
      ]
     },
     {
@@ -178,10 +178,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-06 10:25:09,857 - INFO - Selected 4 with best score of 0.7493089855948419\n",
-      "2024-05-06 10:25:16,816 - INFO - Selected 5 with best score of 0.7805763391343548\n",
-      "2024-05-06 10:25:24,993 - INFO - Finishing as selection best score 0.7805763391343548 was not better than existing model 0.7805763391343548\n",
-      "2024-05-06 10:25:24,994 - INFO - Selected features: [4, 5]\n"
+      "2024-05-06 13:13:09,661 - INFO - Selected 4 with best score of 0.7493089855948419\n",
+      "2024-05-06 13:13:16,523 - INFO - Selected 5 with best score of 0.7805763391343548\n",
+      "2024-05-06 13:13:24,668 - INFO - Finishing as selection best score 0.781was not better than existing model 0.781\n",
+      "2024-05-06 13:13:24,669 - INFO - Selected features: [4, 5]\n"
      ]
     },
     {
@@ -198,10 +198,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-06 10:25:34,093 - INFO - Selected 4 with best score of 0.8532787177248122\n",
-      "2024-05-06 10:25:46,447 - INFO - Selected 5 with best score of 0.9454473071143313\n",
-      "2024-05-06 10:26:01,044 - INFO - Finishing as selection best score 0.9456211701997379 was not better than existing model 0.9454473071143313\n",
-      "2024-05-06 10:26:01,045 - INFO - Selected features: [4, 5]\n"
+      "2024-05-06 13:13:33,785 - INFO - Selected 4 with best score of 0.8532787177248122\n",
+      "2024-05-06 13:13:46,043 - INFO - Selected 5 with best score of 0.9454473071143313\n",
+      "2024-05-06 13:14:00,693 - INFO - Finishing as selection best score 0.946was not better than existing model 0.945\n",
+      "2024-05-06 13:14:00,694 - INFO - Selected features: [4, 5]\n"
      ]
     },
     {
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fbac6ee1d50>"
+       "<matplotlib.legend.Legend at 0x7fca2ec3e090>"
       ]
      },
      "execution_count": 2,
@@ -242,7 +242,7 @@
     "    \"lr\": Pipeline(\n",
     "        [\n",
     "            (\"standard_scaler\", StandardScaler()),\n",
-    "            (\"feature_selector\", StepwiseFeatureSelector(estimator=LogisticRegression(), scoring=roc_auc_score, min_improvement_r=min_improvement_r)),\n",
+    "            (\"feature_selector\", StepwiseFeatureSelector(estimator=LogisticRegression(), min_improvement_r=min_improvement_r)),\n",
     "            (\"classifier\", LogisticRegression()),\n",
     "        ]\n",
     "    ),\n",
@@ -250,7 +250,7 @@
     "        [\n",
     "            (\n",
     "                \"feature_selector\",\n",
-    "                StepwiseFeatureSelector(estimator=DecisionTreeClassifier(max_depth=2), scoring=roc_auc_score, min_improvement_r=min_improvement_r),\n",
+    "                StepwiseFeatureSelector(estimator=DecisionTreeClassifier(max_depth=2), min_improvement_r=min_improvement_r),\n",
     "            ),\n",
     "            (\"classifier\", DecisionTreeClassifier(max_depth=2, min_samples_leaf=40000)),\n",
     "        ]\n",
@@ -259,7 +259,7 @@
     "        [\n",
     "            (\n",
     "                \"feature_selector\",\n",
-    "                StepwiseFeatureSelector(estimator=DecisionTreeClassifier(max_depth=4), scoring=roc_auc_score, min_improvement_r=min_improvement_r),\n",
+    "                StepwiseFeatureSelector(estimator=DecisionTreeClassifier(max_depth=4), min_improvement_r=min_improvement_r),\n",
     "            ),\n",
     "            (\"classifier\", DecisionTreeClassifier(max_depth=4, min_samples_leaf=40000)),\n",
     "        ]\n",
