--- a/notebooks/features.ipynb
+++ b/notebooks/features.ipynb
@@ -52,6 +52,7 @@
        "      <th>living room</th>\n",
        "      <th>lounge</th>\n",
        "      <th>study</th>\n",
+       "      <th>total_all_locations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -70,6 +71,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -86,6 +88,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -102,6 +105,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -118,6 +122,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -134,6 +139,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -154,12 +160,12 @@
        "3                   0    0          0         0             0            0   \n",
        "4                   0    0          0         0             0            0   \n",
        "\n",
-       "   hallway  kitchen  living room  lounge  study  \n",
-       "0        1        0            0       0      0  \n",
-       "1        1        0            0       0      0  \n",
-       "2        1        0            0       0      0  \n",
-       "3        1        0            0       0      0  \n",
-       "4        0        1            0       0      0  "
+       "   hallway  kitchen  living room  lounge  study  total_all_locations  \n",
+       "0        1        0            0       0      0                    1  \n",
+       "1        1        0            0       0      0                    1  \n",
+       "2        1        0            0       0      0                    1  \n",
+       "3        1        0            0       0      0                    1  \n",
+       "4        0        1            0       0      0                    1  "
       ]
      },
      "execution_count": 1,
@@ -377,7 +383,7 @@
        "      <th>home_id</th>\n",
        "      <th>datetime</th>\n",
        "      <th>multiple_occupancy</th>\n",
-       "      <th>total_per_hour</th>\n",
+       "      <th>total_all_locations_per_hour</th>\n",
        "      <th>multiple_room_triggers_5min_per_hour</th>\n",
        "      <th>multiple_room_triggers_30min_per_hour</th>\n",
        "      <th>multiple_room_triggers_1h_per_hour</th>\n",
@@ -434,7 +440,7 @@
        "      <td>0904961f621c9bd03542b43b992ec431</td>\n",
        "      <td>2024-01-01 08:36:42+00:00</td>\n",
        "      <td>0</td>\n",
-       "      <td>57.142857</td>\n",
+       "      <td>31.746032</td>\n",
        "      <td>6.349206</td>\n",
        "      <td>6.349206</td>\n",
        "      <td>6.349206</td>\n",
@@ -452,12 +458,19 @@
        "3  0904961f621c9bd03542b43b992ec431 2024-01-01 08:36:20+00:00   \n",
        "4  0904961f621c9bd03542b43b992ec431 2024-01-01 08:36:42+00:00   \n",
        "\n",
-       "   multiple_occupancy  total_per_hour  multiple_room_triggers_5min_per_hour  \\\n",
-       "0                   0             inf                                   NaN   \n",
-       "1                   0      112.500000                              0.000000   \n",
-       "2                   0       23.027719                              0.000000   \n",
-       "3                   0       26.422018                              0.000000   \n",
-       "4                   0       57.142857                              6.349206   \n",
+       "   multiple_occupancy  total_all_locations_per_hour  \\\n",
+       "0                   0                           inf   \n",
+       "1                   0                    112.500000   \n",
+       "2                   0                     23.027719   \n",
+       "3                   0                     26.422018   \n",
+       "4                   0                     31.746032   \n",
+       "\n",
+       "   multiple_room_triggers_5min_per_hour  \\\n",
+       "0                                   NaN   \n",
+       "1                              0.000000   \n",
+       "2                              0.000000   \n",
+       "3                              0.000000   \n",
+       "4                              6.349206   \n",
        "\n",
        "   multiple_room_triggers_30min_per_hour  multiple_room_triggers_1h_per_hour  \\\n",
        "0                                    NaN                                 NaN   \n",
@@ -481,11 +494,12 @@
    "source": [
     "from lib.data.features import add_cumulative_triggers, add_elapsed_time\n",
     "\n",
-    "time_series = add_cumulative_triggers(time_series, locations + multiple_location_event_columns)\n",
+    "columns_to_sum = locations + multiple_location_event_columns + [\"total_all_locations\"]\n",
+    "time_series = add_cumulative_triggers(time_series, columns_to_sum)\n",
     "time_series = add_elapsed_time(time_series)\n",
     "\n",
     "new_features = []\n",
-    "for col in [\"total_cumulative\"] + multiple_location_event_columns:\n",
+    "for col in [\"total_all_locations_cumulative\"] + multiple_location_event_columns:\n",
     "    new_col = col.replace(\"_cumulative\", \"\") + \"_per_hour\"\n",
     "    time_series[new_col] = time_series[col] / time_series[\"elapsed_time_hours\"]\n",
     "    new_features.append(new_col)\n",
@@ -599,7 +613,9 @@
     }
    ],
    "source": [
-    "time_series[\"bathroom_proportion\"] = (time_series[\"bathroom1_cumulative\"] + time_series[\"WC1_cumulative\"]) / time_series[\"total_cumulative\"]\n",
+    "time_series[\"bathroom_proportion\"] = (\n",
+    "    time_series[\"bathroom1_cumulative\"] + time_series[\"WC1_cumulative\"]\n",
+    ") / time_series[\"total_all_locations_cumulative\"]\n",
     "display(time_series[[\"home_id\", \"datetime\", \"multiple_occupancy\", \"bathroom_proportion\"]].head(5))"
    ]
   }
