--- a/notebooks/onnx_inference.ipynb
+++ b/notebooks/onnx_inference.ipynb
@@ -37,7 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fec8c610f90>"
+       "<matplotlib.legend.Legend at 0x7f91f629bfd0>"
       ]
      },
      "execution_count": 1,
@@ -138,7 +138,7 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Model performance on the final unseen set has decined from 79 on the validation set to 61 on the test set. It may be worth investing again with a larger set of homes, as this could be partially attributed to there being so few unique homes in the test set, causing high variance in our measured model effectiveness and downstream model selection decisions.\n",
+    "Model performance on the final unseen set has declined from 79 on the validation set to 61 on the test set. It may be worth investing again with a larger set of homes, as this could be partially attributed to there being so few unique homes in the test set, causing high variance in our measured model effectiveness and downstream model selection decisions.\n",
     "\n",
     "In the below table, we can see that the model predictions were wrong in cases where there was a higher bathroom proportion for a single occupancy household than we had fit to in the training and test sets.\n",
     "\n",
@@ -371,16 +371,16 @@
    ],
    "source": [
     "df_test.loc[test_locator, \"pred_proba\"] = pred_skl\n",
-    "    df_test.groupby(\"home_id\").agg(\n",
-    "        {\n",
-    "            \"multiple_occupancy\": \"first\",\n",
-    "            \"pred_proba\": \"last\",\n",
-    "            \"datetime\": lambda x: len(set(x)),\n",
-    "            \"bathroom_proportion\": \"last\",\n",
-    "            \"total_all_locations_per_hour\": \"last\",\n",
-    "            \"elapsed_time_hours\": \"last\",\n",
-    "        }\n",
-    "    ).sort_values(\"multiple_occupancy\", ascending=False)"
+    "df_test.groupby(\"home_id\").agg(\n",
+    "    {\n",
+    "        \"multiple_occupancy\": \"first\",\n",
+    "        \"pred_proba\": \"last\",\n",
+    "        \"datetime\": lambda x: len(set(x)),\n",
+    "        \"bathroom_proportion\": \"last\",\n",
+    "        \"total_all_locations_per_hour\": \"last\",\n",
+    "        \"elapsed_time_hours\": \"last\",\n",
+    "    }\n",
+    ").sort_values(\"multiple_occupancy\", ascending=False)"
    ]
   }
  ],
